Nearly all information added into the about. The style is good, we are on our way.

--- a/webapp/templates/about.html
+++ b/webapp/templates/about.html
@@ -20,8 +20,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
     <link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
-    <link rel=”stylesheet” href=”css/bootstrap-responsive.css”>
-
     <link href="{% static 'css/normalize.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static "webapp/css/fonts.css" %}" rel="stylesheet" type="text/css" media="all"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -45,24 +43,103 @@
 
 {% block content %}
 
-    <div class="bg-info">
-        <section>
-            <h2 class="text-center">About Us</h2>
-            <HR WIDTH="75%" COLOR="red" SIZE="4">
-            Glorified Community Empowerment Trust (GCET) is an organisation found on values of economic
-            empowerment through servant leadership and volunteerism. It is run by and for the
-            marginalised
-            communities. Through own capital, appeals, grants and loans, capitalised economic ventures
-            will
-            improve the standard of living and create a positive change. GCET has a pool of expert
-            consultants
-            whose mission is poverty alleviation achieved by tailor-making community solutions to end
-            poverty of
-            all forms.
-            GCET is a mother organisation to Jumping Protein, Crotchet Consultancy, with GCET itself
-            operating as a charity organization.
-        </section>
-    </div>
+    <article class="grid demo-styling">
+        <header class="headline">
+            <h1>Our Vision</h1>
+            <h2>An economically limitless Africa</h2>
+        </header>
+
+        <div class="text-block">
+            <p>Glorified Community Empowerment Trust (GCET) is an organisation found on values of economic empowerment
+                through servant leadership and volunteerism. It is run by and for the marginalised communities. Through
+                own capital, appeals, grants and loans, capitalised economic ventures will improve the standard of
+                living and create a positive change. GCET has a pool of expert consultants whose mission is poverty
+                alleviation achieved by tailor-making community solutions to end poverty of all forms.
+                GCET is a mother organisation to
+                Jumping Protein,
+                Crotchet consultancy,
+                and GCET itself operates as charity organisation </p>
+        </div>
+
+        <div class="text-block">
+            <div class="image-wrapper">
+                <header class="headline">
+                </header>
+            </div>
+            <header class="headline">
+
+                <h1>Background</h1>
+            </header>
+            <p>Glorified Community Empowerment Trust is a gateway to success organisation whose goal is to empower
+                the marginalised societies in Zimbabwean and across Africa through business trainings and
+                investments. The organisation was formed in 2018. GCET is an entrepreneurial based organisation that
+                serves the community through creativity, innovation and enterprise.
+                We derive our joy from empowering people with disabilities, young rural women in business and those
+                wishing to start businesses, orphans, widows the elderly and vulnerable children. We also support
+                parent support groups who have entrepreneurship as one of their pillars to alleviate poverty.
+                Poverty has deprived our society of basic human needs like food, clothing, shelter, medication and
+                education. This has impacted heavily on success pathway institutions like orphanages elderly homes
+                and churches caring for the distressed in their areas of operation. Our team of business consultants
+                identifies the need, strategize the solution, tailor make trainings, deliver and monitor
+                implementation.
+                Our project timeframe is a three year period per district to enable business growth and evaluations.
+                During this period investments in trainings, business capitalisation, further development,
+                evaluations and reviews will take place. A project replication
+                plan will be crafted tailor-made to
+                suit the intended community.</p>
+        </div>
+
+        <header class="headline">
+
+        </header>
+        <div class="text-block">
+            <h1>Statement of Need</h1>
+
+            <p>Our marginal societies suffer from innate poverty. Orphans and vulnerable children, persons with a
+                disability, widows, the elderly and also young rural women are the hardest hit. These individuals and
+                groups live on less than a dollar a day.
+                There are massive food shortages in the communities. They are deprived from a decent meal hence prone to
+                malnutrition diseases. Most of them live on two light meals per day to keep them alive. A balanced diet
+                in this context is usually a nightmare. For those in elderly homes and orphanages food supply is a great
+                challenge. Most communities have little to none good floors of income to sustain them hence the need to
+                establish some projects.</p>
+
+            <p>Education is a cornerstone to human kind however poverty has denied our beloved communities. Most
+                marginalised communities are not able to attend school due to lack of incomes to meet the school fees
+                demand. A high rate of dropouts is experienced. A majority of these will contribute to a low literacy
+                rate and create vulnerable communities. </p>
+
+            <p>The majority of the population in context has no decent shelter. It is usually a situation of
+                overpopulation or exposure to harsh weather and failure to afford basic utilities. These need a good
+                income and some projects would be best suited a lasting solution.</p>
+
+            <p>Medical bills have posed a life threatening situation. In the face of the pandemics the poor cannot
+                survive the costs even the medical subsidy cannot reach far to them. HIV/AIDS, malaria corona virus and
+                cancer to name a few have robed our loved ones due to poverty. </p>
+
+            <p>Through income generating projects at both individual and institutional levels more income can be
+                generated to sustain a life. Communities have either tried and gave up or contemplated starting income
+                generating projects to address their basic needs. GCET is there to bridge the knowledge gap and empower
+                communities through entrepreneurship. Projects will be from all sectors of the economy with a major
+                thrust in agriculture.</p>
+        </div>
+        <div class="text-block">
+            <h1>How We Add Value</h1>
+            <p>Our social philanthropy is to address human need in education, food, shelter and medication through
+                partnership and cooperative efforts to end poverty. We help communities identify their community
+                sustainable business solution and help them achieve it. We are a gateway to success through imparting
+                business skills, mentoring and marketing. We are an entrepreneurship based organisation hence we deliver
+                skill through a team of our diverse business experts. </p>
+        </div>
+        <div class="text-block">
+            <p>We are a vehicle to success through voluntary work. We mentor our stakeholders until they achieve their
+                destiny. We believe in combined efforts hence we engage any stakeholder whose goal is to economically
+                emancipate marginalised communities. We believe in the marginalised community engagement for a lasting
+                community solution. Communities decide and manage their projects our role is to empower them to make
+                calculated informed decision</p>
+        </div>
+    </article>
+
 
 
 {% endblock content %}
