--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -13,11 +13,17 @@ h1 {
     font-weight: normal;
     border-bottom: 1px solid #bbb;
     padding: 0 0 10px 0;
+    text-align: center;
 }
 
 h2 {
     font-weight: normal;
     margin: 30px 0 0;
+    text-align: center;
+}
+
+h6 {
+    text-align: center;
 }
 
 #content {
@@ -27,11 +33,15 @@ h2 {
 }
 
 #sidebar {
-    float: right;
-    width: 25%;
+    width: 15%;
     padding: 10px;
     background: #efefef;
-    height: 100%;
+    height: 80%;
+    position: fixed;
+    right: 0;
+    top: 10em;
+    padding-top: 40px;
+
 }
 
 p.date {
@@ -41,15 +51,67 @@ p.date {
     font-style: italic;
 }
 
-.navbar-custom {
-    background-color: #2b542c;
+
+.navbar {
+    width: 100%;
+    height: 60px;
+    background: #0b1b09e8;;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 0 25px;
 }
 
-/* change the brand and text color */
-.navbar-custom .navbar-brand,
-.navbar-custom .navbar-text {
-    color: rgba(255,255,255,.8);
+.navbar .inner_navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
 }
+
+.navbar .hamburger {
+    display: none;
+}
+
+.navbar .logo a {
+    font-weight: 700;
+    font-size: 20px;
+    letter-spacing: 3px;
+}
+
+.navbar .logo a span {
+    color: khaki;
+}
+
+.navbar .menu ul {
+    display: flex;
+    list-style: none;
+}
+
+.navbar .menu ul li a {
+    width: 120px;
+    margin-right: 10px;
+    display: block;
+    text-align: center;
+    padding: 10px;
+    border-radius: 25px;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 14px;
+    letter-spacing: 2px;
+    transition: all 0.2s ease;
+}
+
+.navbar .menu ul li:last-child a {
+    margin-right: 0;
+}
+
+.navbar .menu ul li a:hover,
+.navbar .menu ul li a.active {
+    background: #32381abf;
+}
+
 
 
 
