--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -121,6 +121,9 @@
                         crickets during the lean season. By farming them, we can make them available throughout the
                         year.
                         They have 2.5 times more protein than chicken and a third of the cost of chicken. </p>
+                    <br>
+                    <p>Finally they are so easy to farm that even those with disabilities or children can be involved.
+</p>
                 </div>
             </div>
             <div class="col-md-4">
@@ -218,8 +221,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
                 <h3>Leadership</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores,
-                    perspiciatis accusamus asperiores sint consequuntur debitis.</p>
+                <p></p>
             </div>
         </div>
     </div>
@@ -234,10 +236,7 @@
                     <div>
                         <h3>Esnath Divasoni</h3>
                         <p><span>Executive Director & Founder</span></p>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                            Consonantia, there live the blind texts. Far far away, behind the word
-                            mountains,
-                            far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                        <p></p>
                     </div>
 
                     <p class="fh5co-social-icons">
@@ -256,10 +255,7 @@
                     <div>
                         <h3>Mr. Lameck Marondera</h3>
                         <p><span>Director</span></p>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                            Consonantia, there live the blind texts. Far far away, behind the word
-                            mountains,
-                            far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                        <p></p>
                     </div>
                     <p class="fh5co-social-icons">
                         <a href="#"><i class="icon-twitter2"></i></a>
@@ -277,8 +273,8 @@
     <div id="welcome">
         <div class="container">
             <div class="title">
-                <h2>Fusce ultrices fringilla metus</h2>
-                <span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
+                <h2>Our Vision</h2>
+                <span class="byline">To create climate smart solutions to nutrient and assisting the community to produce better in with the locally available resources </span>
             </div>
             <p>
 
