Got all of the urls connected properly. Navbar leads straight to gallery. Namespaces are working.

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -61,7 +61,7 @@
                         <li><a href="{% url 'index' %}" class="active">Home</a></li>
                         <li><a href="{% url 'about' %}">About Us</a></li>
                         <li><a href="{% url 'blog:post_list' %}">Blog</a></li>
-                        <li><a href="#">Gallery</a></li>
+                        <li><a href="{% url 'gallery' %}">Gallery</a></li>
                     </ul>
                 </div>
             </div>
