--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -382,10 +382,12 @@ ul.contact li a.icon-rss:before {
 
 .title {
     margin-bottom: 3em;
+    font-family: "Source Code Pro", serif;
+    font-size: 2.3em;
 }
 
 .title h2 {
-    font-size: 2.7em;
+    font-size: 2.3em;
 
 }
 
@@ -521,7 +523,7 @@ ul.contact li a.icon-rss:before {
 }
 
 #banner .title h2 {
-    font-size: 4em;
+    font-size: 3.5em;
     color: khaki;
     margin-top: revert;
 }
@@ -762,6 +764,10 @@ h1 {
 .demo-styling > * {
     color: #222;
     padding: 0.5rem;
+}
+
+.about-wrapper {
+    margin: 15px;
 }
 
 /*****************************/
