--- a/webapp/templates/about.html
+++ b/webapp/templates/about.html
@@ -42,6 +42,25 @@
 </head>
 
 {% block content %}
+    <style>
+    #header-wrapper {
+    position: relative;
+    padding-top: 0;
+    padding-bottom: 3em;
+    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.19), rgba(0, 0, 0, 0.1)), url("/static/webapp/images/group-sitting.webp") 50% 0 no-repeat;
+    background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/webapp/images/group-sitting.webp") 50% 0 no-repeat;
+    background: linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/webapp/images/group-sitting.webp") 50% 0 no-repeat;
+    background-size: cover;
+    display: block;
+    height: auto;
+    width: 100%;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 50% 20%;
+    border-bottom-right-radius: 50% 20%;
+}</style>
+
+
   <article class="grid demo-styling">
         <header class="headline">
             <h1>Our Vision</h1>
