Changed member titles

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -235,7 +235,7 @@
 
                     <div>
                         <h3>Esnath Divasoni</h3>
-                        <p><span>Executive Director & Founder</span></p>
+                        <p><span>Founder</span></p>
                         <p></p>
                     </div>
 
