Started adding bootstrap to template for gallery.html

--- a/gallery/templates/gallery/gallery.html
+++ b/gallery/templates/gallery/gallery.html
@@ -20,8 +20,21 @@
     <div class="row">
         <div class="col-md-3">
 
+            <div class="card" style="width: 18rem;">
+                <div class="card-header">
+                    Gallery
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                </ul>
+            </div>
+
         </div>
-        <div class="col-md-9"
+        <div class="col-md-9">
+            Gallery
+        </div>
     </div>
 </div>
 
