--- a/gallery/templates/gallery/gallery.html
+++ b/gallery/templates/gallery/gallery.html
@@ -1,9 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
+
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
@@ -15,16 +18,18 @@
 
     <title>Gallery</title>
 </head>
-<body>
+<body class="m-5">
 <div class="container">
     <div class="row">
         <div class="col-md-3">
 
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <div class="card-header">
                     Gallery
                 </div>
                 <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+
                     <li class="list-group-item">An item</li>
                     <li class="list-group-item">A second item</li>
                     <li class="list-group-item">A third item</li>
@@ -33,7 +38,21 @@
 
         </div>
         <div class="col-md-9">
-            Gallery
+            <div class="row">
+
+                <div class="col-md-4">
+                    <div class="card my-2">
+                        <img src="{% static 'webapp/images/children-esnath-bin.webp' %}" class="image-thumbnail"
+                             alt="...">
+                        <div class="card-body">
+                            <small> Category</small>
+                        </div>
+                        <a href=""></a>
+
+                        <a class="btn btn-outline dark btn-sm m-1">View</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
